--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,8 +2,26 @@
   title="Logue com a sua conta"
   loginButtonText="Entrar"
   registerButtonText="Registrar"
+  (submit)="submit()"
+  (navigate)="navigate()"
+  [disableLoginButton]="!loginForm.valid"
 >
   <form [formGroup]="loginForm">
-    <p>oi</p>
+    <app-default-input-button
+      formControlName="email"
+      inputName="email"
+      type="email"
+      label="email"
+      placeholder="seuemail@gmail.com"
+    >
+    </app-default-input-button>
+
+    <app-default-input-button
+      formControlName="password"
+      inputName="password"
+      type="password"
+      label="Sua senha"
+    >
+    </app-default-input-button>
   </form>
 </app-default-login-layout>
