feat: create expense page and create routes to dashboard and expense to acess on sidebar

--- a/src/app/pages/home/expenses/expenses.component.html
+++ b/src/app/pages/home/expenses/expenses.component.html
@@ -1,7 +1,7 @@
-<div class="content">
-  <h1>Dashboard</h1>
+<div class="expenses content">
+  <h1>Despesas</h1>
   <div class="card">
-    <div class="card-head">Lorem ipsum - dashboard</div>
+    <div class="card-head">Lorem ipsum - expense</div>
     <div class="card-body">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas ducimus
       soluta, quasi aut ipsa non, ullam enim rem repudiandae, vitae provident
