--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,6 +1,26 @@
-<div class="sidenav">
-  <ul>
-    <li>heelo</li>
-  </ul>
+<div class="scrollwrap scrollwrap_delayed">
+  <div class="sidenav">
+    <ul class="sidenav-nav">
+      <li>
+        <a
+          [routerLink]="['/home/dashboard']"
+          routerLinkActive="router-link-active"
+          class="sidenav-nav-item"
+        >
+          <i class="sidenav-link-icon"></i>
+          <span class="sidenav-link-text"> Dashboard </span>
+        </a>
+      </li>
+      <li>
+        <a
+          [routerLink]="['/home/expenses']"
+          routerLinkActive="router-link-active"
+          class="sidenav-nav-item"
+        >
+          <i class="sidenav-link-icon"></i>
+          <span class="sidenav-link-text">Despesas</span>
+        </a>
+      </li>
+    </ul>
+  </div>
 </div>
-<app-content></app-content>
