--- a/src/app/pages/home/dashboard/dashboard.component.html
+++ b/src/app/pages/home/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
-<app-sidenav></app-sidenav>
-<!-- <div class="dashboard">
+<div class="content">
   <h1>Dashboard</h1>
   <div class="card">
     <div class="card-head">Lorem ipsum - dashboard</div>
@@ -9,4 +8,4 @@
       animi. Inventore rerum, voluptas optio dignissimos blanditiis modi illo!
     </div>
   </div>
-</div> -->
+</div>
