--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,12 @@
-<app-sidenav></app-sidenav>
-<app-content></app-content>
+<div class="app-container">
+  <app-sidenav></app-sidenav>
+  <div
+    class="content"
+    [ngClass]="{
+      'body-trimmed': isSidenavExpanded,
+      'body-md-screen': !isSidenavExpanded
+    }"
+  >
+    <router-outlet></router-outlet>
+  </div>
+</div>
