--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,3 +1,4 @@
-<div class="content-wrapper">
-  <router-outlet></router-outlet>
+<div class="card">
+  <app-dashboard></app-dashboard>
+  <app-expenses></app-expenses>
 </div>
