feat: add icon home on dashboard and dollar on expenses in sidenav with ng-icons/mynaui

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -11,7 +11,8 @@
           routerLinkActive="router-link-active"
           class="sidenav-nav-link"
         >
-          <i class="sidenav-link-icon fa fa-tachometer">D</i>
+          <ng-icon class="sidenav-link-icon" name="mynaHome" />
+
           <span class="sidenav-link-text" *ngIf="isExpanded">Dashboard</span>
         </a>
       </li>
@@ -21,7 +22,7 @@
           routerLinkActive="router-link-active"
           class="sidenav-nav-link"
         >
-          <i class="sidenav-link-icon fa fa-money-bill">E</i>
+          <ng-icon class="sidenav-link-icon" name="mynaDollarCircle" />
           <span class="sidenav-link-text" *ngIf="isExpanded">Despesas</span>
         </a>
       </li>
