--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
+
 @import "ngx-toastr/toastr";
 
 * {
@@ -9,5 +11,9 @@
 
 body {
   position: relative;
-  font-family: "Roboto", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
+  font-family: "Geist", sans-serif;
+  /* font-optical-sizing: auto; */
+  /* font-weight: 200; */
+  /* font-style: normal; */
 }
