--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,9 +1,15 @@
 <div [class.collapsed]="!isExpanded" class="sidenav-container">
-  <button class="toggle-btn" (click)="toggleSidenav()">
-    <i [ngClass]="isExpanded ? 'fa fa-angle-left' : 'fa fa-angle-right'"></i>
-  </button>
-
   <div class="sidenav">
+    <button class="toggle-btn" (click)="toggleSidenav()">
+      <ng-icon
+        class="sidenav-toggle-icon"
+        [name]="isExpanded ? 'mynaChevronLeft' : 'mynaChevronRight'"
+        [ngStyle]="{
+          transform: isExpanded ? 'rotate(0deg)' : 'rotate(360deg)',
+          transition: 'transform 0.6s ease'
+        }"
+      />
+    </button>
     <ul class="sidenav-nav">
       <li class="sidenav-nav-item">
         <a
