--- a/src/app/pages/home/dashboard/dashboard.component.css
+++ b/src/app/pages/home/dashboard/dashboard.component.css
@@ -1,4 +1,6 @@
-.card {
+/* @import "/content-shared.css"; */
+
+/* .card {
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
@@ -26,4 +28,4 @@
 .body-md-screen {
   width: calc(100% - 5rem);
   margin-left: 5rem;
-}
+} */
