--- a/src/app/pages/home/expenses/expenses.component.css
+++ b/src/app/pages/home/expenses/expenses.component.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
@@ -26,4 +26,4 @@
 .body-md-screen {
   width: calc(100% - 5rem);
   margin-left: 5rem;
-}
+} */
