--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -32,6 +32,16 @@
           <span class="sidenav-link-text" *ngIf="isExpanded">Despesas</span>
         </a>
       </li>
+      <li class="sidenav-nav-item">
+        <a
+          [routerLink]="['/company']"
+          routerLinkActive="router-link-active"
+          class="sidenav-nav-link"
+        >
+          <ng-icon class="sidenav-link-icon" name="mynaBuildingOne" />
+          <span class="sidenav-link-text" *ngIf="isExpanded">Empresas</span>
+        </a>
+      </li>
     </ul>
   </div>
 </div>
