feat: create post method to create companies and add styles to form companies

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -28,7 +28,7 @@
           routerLinkActive="router-link-active"
           class="sidenav-nav-link"
         >
-          <ng-icon class="sidenav-link-icon" name="mynaDollarCircle" />
+          <ng-icon class="sidenav-link-icon" name="tdesignMoneyFilled" />
           <span class="sidenav-link-text" *ngIf="isExpanded">Despesas</span>
         </a>
       </li>
