--- a/src/app/pages/home/company/company.component.css
+++ b/src/app/pages/home/company/company.component.css
@@ -1,4 +1,3 @@
-/* add-company-modal.component.css */
 .modal-backdrop {
   position: fixed;
   inset: 0;
@@ -16,8 +15,105 @@
   z-index: 1000;
 }
 
+.modal-content {
+  width: 70vh;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 3rem;
+}
+
+.modal-body {
+  /* padding: 0.5rem; */
+}
+
+.form-content {
+  padding: 0.5rem;
+}
+
+.form-header {
+  padding-bottom: 1.5rem;
+}
+
 .form-content-item {
   display: flex;
   flex-direction: column;
-  background-color: aqua;
+  padding-bottom: 2rem;
+  /* width: 50%; */
+}
+
+.form-content-item-text {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+  font-weight: 300;
+}
+/* input start */
+
+.input-content {
+  width: 100%;
+  border-radius: 8px;
+  display: flex;
+}
+
+.form-icon {
+  padding: 12px;
+  border-radius: 8px 0 0 8px;
+  border: 1px solid #ccc;
+  display: flex;
+  background-color: #263238;
+  border: none;
+}
+
+.input-field:focus {
+  outline: none;
+}
+
+.company-icon {
+  color: white;
+  font-size: 25px;
+}
+
+.input-field {
+  border: 1px solid #ccc;
+  background-color: #f1f3f6;
+  /* border: none; */
+  border-radius: 0 8px 8px 0;
+  padding: 12px;
+  width: 100%;
+  font-size: 1rem;
+}
+/* input end */
+
+.close-button {
+  background: none;
+  border: none;
+  color: #000;
+}
+
+.close-icon {
+  cursor: pointer;
+  font-size: 1.8rem;
+}
+
+.button-container {
+}
+
+.button-save {
+  background-color: #263238;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1rem;
+  width: 6rem;
+}
+
+.button-save:hover {
+  background-color: white;
+  color: #000;
+  border: 1px solid #263238;
 }
