--- a/src/app/pages/home/company/company.component.html
+++ b/src/app/pages/home/company/company.component.html
@@ -3,6 +3,34 @@
   <div class="card">
     <div class="card-head">Company</div>
     <div class="card-body">
+      <div class="company-table">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Nome</th>
+              <th>CNPJ</th>
+              <th>Data de Cadastro</th>
+              <th>Ações</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              @for (company of companies; track $index) {
+
+              <td>{{ company.name }}</td>
+              <td>{{ company.cnpj }}</td>
+              <td>{{ company.createdAt | date : "dd/MM/yyyy" }}</td>
+              }
+              <td class="actions">
+                <!-- <button (click)="editCompany(company)">Editar</button> -->
+                <!-- <button (click)="deleteCompany(company.id)">Excluir</button> -->
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
       <!-- <ng-icon name="mynaX" class="close-icon"></ng-icon> -->
       <button (click)="openModal()">Cadastrar Empresa</button>
 
