--- a/src/app/pages/home/company/company.component.css
+++ b/src/app/pages/home/company/company.component.css
@@ -26,6 +26,17 @@
   padding-bottom: 3rem;
 }
 
+.content-header {
+  display: flex;
+  align-items: center;
+}
+
+.add-company {
+  margin: 0.8rem;
+  font-size: 30px;
+  cursor: pointer;
+}
+
 .modal-body {
   /* padding: 0.5rem; */
 }
@@ -119,7 +130,9 @@
 }
 
 .company-list {
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
+  border-radius: 0.5rem;
+  box-shadow: 0 0.25rem 0.5rem #e6edef;
 }
 
 .no-companies {
@@ -130,11 +143,10 @@
 .company-table {
   width: 100%;
   border-collapse: collapse;
-  border: 1px solid #ccc;
 }
 
 .table-header {
-  background-color: #f2f2f2;
+  /* background-color: #f2f2f2; */
 }
 
 .table-row:hover {
@@ -142,7 +154,8 @@
 }
 
 .table-cell {
-  border: 1px solid #ccc;
+  border: 1px solid #edf1f7;
+  /* border: 1px solid #ccc; */
   padding: 8px;
   text-align: left;
 }
