--- a/src/app/pages/home/company/company.component.html
+++ b/src/app/pages/home/company/company.component.html
@@ -1,7 +1,17 @@
 <div class="content">
-  <h1>Companies</h1>
+  <div class="content-header">
+    <h1>Registro de empresas</h1>
+    <ng-icon
+      [name]="isHovering ? 'tdesignAddCircleFilled' : 'tdesignAddCircle'"
+      class="add-company"
+      (mouseenter)="isHovering = true"
+      (mouseleave)="isHovering = false"
+      (click)="openModal()"
+    ></ng-icon>
+  </div>
+
   <div class="card">
-    <div class="card-head">Company</div>
+    <!-- <div class="card-head">Empresas</div> -->
     <div class="card-body">
       <div class="company-list">
         @if (companies.length === 0) {
@@ -10,7 +20,7 @@
         <table class="company-table">
           <thead>
             <tr class="table-header">
-              <th class="table-cell">Nome</th>
+              <th class="table-cell">Nome da empresa</th>
               <th class="table-cell">CNPJ</th>
               <th class="table-cell">Data de Criação</th>
             </tr>
@@ -29,9 +39,6 @@
         </table>
         }
       </div>
-
-      <!-- <ng-icon name="mynaX" class="close-icon"></ng-icon> -->
-      <button (click)="openModal()">Cadastrar Empresa</button>
 
       <div *ngIf="showModal" class="modal-backdrop" (click)="close()"></div>
 
