fix: get the correct companyId when some company is selected on creates bank account

--- a/src/app/pages/home/bank-accounts/bank-accounts.component.html
+++ b/src/app/pages/home/bank-accounts/bank-accounts.component.html
@@ -1,6 +1,13 @@
 <h2>Contas Bancárias</h2>
 
-<form (ngSubmit)="createAccount()">
+<form (ngSubmit)="createAccount()" class="account-form">
+  <select [(ngModel)]="newAccount.companyId" name="companyId" required>
+    <option [ngValue]="null" disabled selected>Selecione uma empresa</option>
+    <option *ngFor="let company of companies" [ngValue]="company.id">
+      {{ company.name }}
+    </option>
+  </select>
+
   <input
     [(ngModel)]="newAccount.bankName"
     name="bankName"
