--- a/src/app/components/sidenav/sidenav.component.css
+++ b/src/app/components/sidenav/sidenav.component.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 16.5625rem; /* largura expandida */
-  transition: width 0.3s ease;
+  transition: width 0.5s ease;
+  box-shadow: 0.063rem 0 1.25rem 0 #8690a3;
 }
 
 .sidenav-container.collapsed {
