--- a/src/app/pages/home/bank-accounts/bank-accounts.component.css
+++ b/src/app/pages/home/bank-accounts/bank-accounts.component.css
@@ -1,30 +1,3 @@
-.account-form {
-  display: grid;
-  gap: 10px;
-  max-width: 400px;
-  margin-bottom: 20px;
-}
-
-.account-form input,
-.account-form select,
-.account-form button {
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-  font-size: 14px;
-}
-
-.account-form button {
-  background-color: #007bff;
-  color: white;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.account-form button:hover {
-  background-color: #0056b3;
-}
-
 ul {
   list-style: none;
   padding: 0;
@@ -39,4 +12,167 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.modal-backdrop {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.modal {
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: white;
+  padding: 2rem;
+  border-radius: 8px;
+  z-index: 1000;
+}
+
+.modal-content {
+  width: 70vh;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 3rem;
+}
+
+.content-header {
+  display: flex;
+  align-items: center;
+}
+
+.modal-body {
+  /* padding: 0.5rem; */
+}
+
+.form-content {
+  padding: 0.5rem;
+}
+
+.form-header {
+  padding-bottom: 1.5rem;
+}
+
+.form-content-item {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 2rem;
+  /* width: 50%; */
+}
+
+.form-content-item-text {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+  font-weight: 300;
+}
+/* input start */
+
+.input-content {
+  width: 100%;
+  border-radius: 8px;
+  display: flex;
+}
+
+.form-icon {
+  padding: 12px;
+  border-radius: 8px 0 0 8px;
+  border: 1px solid #ccc;
+  display: flex;
+  background-color: #263238;
+  border: none;
+}
+
+.input-field:focus {
+  outline: none;
+}
+
+.company-icon {
+  color: white;
+  font-size: 25px;
+}
+
+.input-field {
+  border: 1px solid #ccc;
+  background-color: #f1f3f6;
+  /* border: none; */
+  border-radius: 0 8px 8px 0;
+  padding: 12px;
+  width: 100%;
+  font-size: 1rem;
+}
+/* input end */
+
+.close-button {
+  background: none;
+  border: none;
+  color: #000;
+}
+
+.close-icon {
+  cursor: pointer;
+  font-size: 1.8rem;
+}
+
+.button-container {
+}
+
+.button-save {
+  background-color: #263238;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1rem;
+  width: 6rem;
+}
+
+.button-save:hover {
+  background-color: white;
+  color: #000;
+  border: 1px solid #263238;
+}
+
+.company-list {
+  /* margin-top: 1rem; */
+  border-radius: 0.5rem;
+  box-shadow: 0 0.25rem 0.5rem #e6edef;
+}
+
+.no-companies {
+  padding: 8px;
+  font-style: italic;
+  color: #777;
+}
+
+.company-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table-header {
+  /* background-color: #f2f2f2; */
+}
+
+.table-row:hover {
+  background-color: #f9f9f9;
+}
+
+.table-cell {
+  border: 1px solid #edf1f7;
+  /* border: 1px solid #ccc; */
+  padding: 8px;
+  text-align: left;
+}
+
+.table-cell-delete-icon {
+  padding: 8px;
+  text-align: center;
+  border: 1px solid #edf1f7;
 }
